--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
     background-color: #8c99ed;
   }
 }
+
+@media (max-width: 768px) {
+  #iframe {
+    width: 100vw;
+    margin-left: -24px;
+    margin-right: -24px;
+    height: 80svh;
+  }
+}
